--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from read_write_files import read_json, save_json\n",
+    "from read_write_files import read_json, save_json, get_parser_paths\n",
     "from collections import Counter\n",
     "import itertools\n",
     "import pandas as pd\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,9 +988,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-9aa89c4a2c78>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-9aa89c4a2c78>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    sense_split[index][0] =\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def calc_sense_category_probs(sense_model,senses):\n",
     "    \n",
@@ -1015,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,9 +1048,6 @@
     "            \"f1\":f1\n",
     "        }\n",
     "    \n",
-    "    #TODO\n",
-    "    #sense_model = calc_sense_category_probs(sense_model,sense_set)\n",
-    "    \n",
     "    return sense_model\n",
     "    \n",
     "    "
@@ -1049,24 +1055,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weight_parser_by_accuracy(gold,parsers):\n",
+    "def weight_parser_by_accuracy(sense_model,gold,parsers):\n",
     "    \n",
     "    parser_f1_scores = []\n",
     "    \n",
-    "    for parser in parsers:\n",
-    "        parser_f1_scores += [(parser[\"Parser\"],scorer.evaluate(gold,parser)[7])]\n",
+    "    for name,relations in parsers:\n",
+    "        parser_f1_scores += [(name,scorer.evaluate_sense(gold,relations).compute_micro_average_f1()[0])]\n",
+    "    parser_f1_sum = sum(zip(*parser_f1_scores)[1])\n",
+    "    parser_weights = {name:f1_score/parser_f1_sum for name,f1_score in parser_f1_scores}\n",
+    "    \n",
+    "    for tmp_model in sense_model:\n",
+    "        tmp_model[\"weight\"] = parser_weights[tmp_model[\"parser\"]]\n",
     "        \n",
-    "    parser_f1_sum = sum(zip(parser_f1_scores[1]))\n",
-    "    parser_weights = {name:f1_score/parser_f1_sum for name,f1_score in parser_f1_scores}"
+    "    return sense_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,13 +1085,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = []\n",
-    "model_path = \"data/project_files/test/sense_model.json\"\n",
-    "\n",
+    "model_path = \"data/project_files/test/sense_model_V2.json\"\n",
     "\n",
     "for parser_name,parser_pred in zip(*[parser_names,parser_senses]):\n",
     "    tmp_model = create_one_parser_model(gold_senses,parser_pred)\n",
@@ -1089,8 +1098,40 @@
     "        \"parser\":parser_name,\n",
     "        \"sense_pred\": tmp_model\n",
     "    }]\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_path = \"data/gold_standard/test/relations.json\"\n",
+    "parsers_path = \"data/submissions/sense_only/test/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = weight_parser_by_accuracy(\n",
+    "    model,\n",
+    "    read_json(gold_path),\n",
+    "    [(name,read_json(path)) for name,path in get_parser_paths(parsers_path)])\n",
+    "\n",
+    "#model\n",
     "    \n",
     "save_json(model,model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sense Model Statistics"
    ]
   },
   {
@@ -1110,13 +1151,6 @@
     "        else:\n",
     "            row += [0]\n",
     "    rows += [tuple(row)]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sense Model Statistics"
    ]
   },
   {
