--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,6 @@
     "            probs += [sense_dic[pred][\"f1\"]]\n",
     "            \n",
     "    result = np.argmax(probs)\n",
-    "    \n",
     "    if sum(probs) == 0:\n",
     "        result = -1\n",
     "    \n",
@@ -119,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "def max_agreement(predictions,model):\n",
     "    sense_counter = Counter(predictions)\n",
     "    best_sense = sense_counter.most_common(1)[0][0]\n",
-    "    \n",
+    "\n",
     "    if best_sense == \"None\":\n",
     "        return -1\n",
     "    \n",
@@ -135,7 +134,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob_maximation(predictions,model):\n",
+    "    \n",
+    "    sense_probs = {pred:[] for pred in set(predictions)}\n",
+    "    \n",
+    "    for pred,tmp_model in zip(*[predictions,model]):\n",
+    "        if pred != \"None\":\n",
+    "            sense_probs[pred] += [tmp_model[\"sense_pred\"][pred][\"f1\"]]\n",
+    "    \n",
+    "    maxi = 0\n",
+    "    best_sense = \"None\"\n",
+    "    for sense in sense_probs:\n",
+    "        sense_probs[sense] = sum(sense_probs[sense])\n",
+    "        if sense_probs[sense] > maxi:\n",
+    "            best_sense = sense\n",
+    "    \n",
+    "\n",
+    "    if best_sense == \"None\":\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return predictions.index(best_sense)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def three_best_agreement(predictions,model):\n",
+    "    weighting = [tmp_model[\"weight\"] for tmp_model in model]\n",
+    "    \n",
+    "    best_model_indexes = []\n",
+    "    for i in range(3):\n",
+    "        best_model_indexes += weighting.pop(np.argmax(weighting))\n",
+    "        \n",
+    "    predictions = [pred for ind,pred in enumerate(predictions) if ind in best_model_indexes]\n",
+    "    new_model = copy.deepcopy(model)\n",
+    "    new_model = [tmp_model for ind,tmp_model in enumerate(new_model) if ind in best_model_indexes]\n",
+    "    \n",
+    "    return max_agreement(predictions,new_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,11 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "max_agreement_parsers = voting(parser_senses,parser_names,sense_model,max_agreement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob_maximation_parsers = voting(parser_senses,parser_names,sense_model,prob_maximation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'weight'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-192-476d778be84d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mthree_best_agreement_parsers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvoting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser_senses\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparser_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msense_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mthree_best_agreement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-84-4819ab9895ae>\u001b[0m in \u001b[0;36mvoting\u001b[0;34m(parser_preds, parser_names, model, voting_algorithm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mparser_pred_zip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mparser_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparser_pred_zip\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvoting_algorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mnew_senses\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-188-eed04fe5f21c>\u001b[0m in \u001b[0;36mthree_best_agreement\u001b[0;34m(predictions, model)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mthree_best_agreement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mweighting\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtmp_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"weight\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtmp_model\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbest_model_indexes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'weight'"
+     ]
+    }
+   ],
+   "source": [
+    "three_best_agreement_parsers = voting(parser_senses,parser_names,sense_model,three_best_agreement)"
    ]
   },
   {
@@ -162,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,36 +266,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([u'EntRel'], [u'Expansion.Instantiation'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_wins_relations = exchange_sense_values(example_parser,total_alignments,best_wins_parsers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([u'EntRel'], [u'Expansion.Restatement'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_agreement_relations = exchange_sense_values(example_parser,total_alignments,max_agreement_parsers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob_maximation_relations = exchange_sense_values(example_parser,total_alignments,prob_maximation_parsers)"
    ]
   },
   {
@@ -281,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -366,8 +438,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#"
+    "## \"Prob Maximation\"\n",
+    "\n",
+    "This algorithm sums up the reliability of all parsers that agree with each other and takes the sense with the highest score."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explicit connectives         : Precision 1.0000 Recall 0.9874 F1 0.9937\n",
+      "Arg 1 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Sense classification--------------\n",
+      "*Micro-Average                    precision 0.2366\trecall 0.2366\tF1 0.2366\n",
+      "Comparison.Concession             precision 0.5000\trecall 0.0187\tF1 0.0360\n",
+      "Comparison.Contrast               precision 0.1000\trecall 0.0741\tF1 0.0851\n",
+      "Contingency.Cause.Reason          precision 0.0286\trecall 0.0132\tF1 0.0180\n",
+      "Contingency.Cause.Result          precision 1.0000\trecall 0.0000\tF1 0.0000\n",
+      "Contingency.Condition             precision 0.8125\trecall 0.5000\tF1 0.6190\n",
+      "EntRel                            precision 0.1944\trecall 0.0700\tF1 0.1029\n",
+      "Expansion.Alternative             precision 1.0000\trecall 0.0000\tF1 0.0000\n",
+      "Expansion.Conjunction             precision 0.5647\trecall 0.1500\tF1 0.2370\n",
+      "Expansion.Instantiation           precision 0.2222\trecall 0.1364\tF1 0.1690\n",
+      "Expansion.Restatement             precision 0.2169\trecall 0.8146\tF1 0.3426\n",
+      "Temporal.Asynchronous.Precedence  precision 1.0000\trecall 0.0816\tF1 0.1509\n",
+      "Temporal.Asynchronous.Succession  precision 0.7273\trecall 0.3871\tF1 0.5053\n",
+      "Temporal.Synchrony                precision 0.1442\trecall 0.8868\tF1 0.2480\n",
+      "Overall parser performance --------------\n",
+      "Precision 0.2366 Recall 0.2366 F1 0.2366\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = scorer.evaluate(test_data,prob_maximation_relations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
