--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sense_model_path = \"data/project_files/test/sense_model.json\"\n",
+    "sense_model_path = \"data/project_files/test/sense_model_V2.json\"\n",
     "total_alignment_path = \"data/project_files/blind/total_alignment.json\"\n",
     "test_data_path = \"data/gold_standard/blind/relations.json\"\n",
     "example_parser_path = \"data/submissions/sense_only/blind/oslopots/output/output.json\""
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,13 +171,18 @@
     "    \n",
     "    best_model_indexes = []\n",
     "    for i in range(3):\n",
-    "        best_model_indexes += weighting.pop(np.argmax(weighting))\n",
-    "        \n",
-    "    predictions = [pred for ind,pred in enumerate(predictions) if ind in best_model_indexes]\n",
-    "    new_model = copy.deepcopy(model)\n",
-    "    new_model = [tmp_model for ind,tmp_model in enumerate(new_model) if ind in best_model_indexes]\n",
+    "        best_model_indexes += [np.argmax(weighting)]\n",
+    "        weighting[np.argmax(weighting)] = 0\n",
     "    \n",
-    "    return max_agreement(predictions,new_model)"
+    "    new_predictions = [pred for ind,pred in enumerate(predictions) if ind in best_model_indexes]\n",
+    "    \n",
+    "    sense_counter = Counter(new_predictions)\n",
+    "    best_sense = sense_counter.most_common(1)[0][0]\n",
+    "\n",
+    "    if best_sense == \"None\":\n",
+    "        return -1\n",
+    "    \n",
+    "    return predictions.index(best_sense)"
    ]
   },
   {
@@ -209,23 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'weight'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-192-476d778be84d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mthree_best_agreement_parsers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvoting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser_senses\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparser_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msense_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mthree_best_agreement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-84-4819ab9895ae>\u001b[0m in \u001b[0;36mvoting\u001b[0;34m(parser_preds, parser_names, model, voting_algorithm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mparser_pred_zip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mparser_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparser_pred_zip\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvoting_algorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mnew_senses\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-188-eed04fe5f21c>\u001b[0m in \u001b[0;36mthree_best_agreement\u001b[0;34m(predictions, model)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mthree_best_agreement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mweighting\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtmp_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"weight\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtmp_model\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbest_model_indexes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'weight'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "three_best_agreement_parsers = voting(parser_senses,parser_names,sense_model,three_best_agreement)"
    ]
@@ -241,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +280,15 @@
    "outputs": [],
    "source": [
     "prob_maximation_relations = exchange_sense_values(example_parser,total_alignments,prob_maximation_parsers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three_best_agreement_relations = exchange_sense_values(example_parser,total_alignments,three_best_agreement_parsers)"
    ]
   },
   {
@@ -478,6 +478,52 @@
    ],
    "source": [
     "result = scorer.evaluate(test_data,prob_maximation_relations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \"Three Best Agreement\"\n",
+    "\n",
+    "This parser is similar to the max agreement algorithm, except that it takes only the predictions into account which are coming from the three best parsers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explicit connectives         : Precision 1.0000 Recall 0.9874 F1 0.9937\n",
+      "Arg 1 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Sense classification--------------\n",
+      "*Micro-Average                    precision 0.5423\trecall 0.5409\tF1 0.5416\n",
+      "Comparison.Concession             precision 0.8571\trecall 0.0566\tF1 0.1062\n",
+      "Comparison.Contrast               precision 0.2090\trecall 0.5091\tF1 0.2963\n",
+      "Contingency.Cause.Reason          precision 0.4756\trecall 0.5342\tF1 0.5032\n",
+      "Contingency.Cause.Result          precision 0.4571\trecall 0.3200\tF1 0.3765\n",
+      "Contingency.Condition             precision 0.8966\trecall 1.0000\tF1 0.9455\n",
+      "EntRel                            precision 0.4238\trecall 0.6400\tF1 0.5100\n",
+      "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
+      "Expansion.Conjunction             precision 0.6817\trecall 0.7469\tF1 0.7128\n",
+      "Expansion.Instantiation           precision 0.6111\trecall 0.2500\tF1 0.3548\n",
+      "Expansion.Restatement             precision 0.4267\trecall 0.2133\tF1 0.2844\n",
+      "Temporal.Asynchronous.Precedence  precision 0.6909\trecall 0.7600\tF1 0.7238\n",
+      "Temporal.Asynchronous.Succession  precision 0.9600\trecall 0.7500\tF1 0.8421\n",
+      "Temporal.Synchrony                precision 0.5932\trecall 0.6731\tF1 0.6306\n",
+      "Overall parser performance --------------\n",
+      "Precision 0.5423 Recall 0.5409 F1 0.5416\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = scorer.evaluate(test_data,three_best_agreement_relations)"
    ]
   },
   {
