--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +152,7 @@
     "        sense_probs[sense] = sum(sense_probs[sense])\n",
     "        if sense_probs[sense] > maxi:\n",
     "            best_sense = sense\n",
+    "            maxi = sense_probs[sense]\n",
     "    \n",
     "\n",
     "    if best_sense == \"None\":\n",
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -457,22 +458,22 @@
       "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Sense classification--------------\n",
-      "*Micro-Average                    precision 0.2366\trecall 0.2366\tF1 0.2366\n",
-      "Comparison.Concession             precision 0.5000\trecall 0.0187\tF1 0.0360\n",
-      "Comparison.Contrast               precision 0.1000\trecall 0.0741\tF1 0.0851\n",
-      "Contingency.Cause.Reason          precision 0.0286\trecall 0.0132\tF1 0.0180\n",
-      "Contingency.Cause.Result          precision 1.0000\trecall 0.0000\tF1 0.0000\n",
-      "Contingency.Condition             precision 0.8125\trecall 0.5000\tF1 0.6190\n",
-      "EntRel                            precision 0.1944\trecall 0.0700\tF1 0.1029\n",
-      "Expansion.Alternative             precision 1.0000\trecall 0.0000\tF1 0.0000\n",
-      "Expansion.Conjunction             precision 0.5647\trecall 0.1500\tF1 0.2370\n",
-      "Expansion.Instantiation           precision 0.2222\trecall 0.1364\tF1 0.1690\n",
-      "Expansion.Restatement             precision 0.2169\trecall 0.8146\tF1 0.3426\n",
-      "Temporal.Asynchronous.Precedence  precision 1.0000\trecall 0.0816\tF1 0.1509\n",
-      "Temporal.Asynchronous.Succession  precision 0.7273\trecall 0.3871\tF1 0.5053\n",
-      "Temporal.Synchrony                precision 0.1442\trecall 0.8868\tF1 0.2480\n",
+      "*Micro-Average                    precision 0.5360\trecall 0.5352\tF1 0.5356\n",
+      "Comparison.Concession             precision 1.0000\trecall 0.0660\tF1 0.1239\n",
+      "Comparison.Contrast               precision 0.2347\trecall 0.4182\tF1 0.3007\n",
+      "Contingency.Cause.Reason          precision 0.4706\trecall 0.4384\tF1 0.4539\n",
+      "Contingency.Cause.Result          precision 0.5455\trecall 0.2449\tF1 0.3380\n",
+      "Contingency.Condition             precision 0.9286\trecall 1.0000\tF1 0.9630\n",
+      "EntRel                            precision 0.3824\trecall 0.7150\tF1 0.4983\n",
+      "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
+      "Expansion.Conjunction             precision 0.6512\trecall 0.7377\tF1 0.6918\n",
+      "Expansion.Instantiation           precision 0.3750\trecall 0.0682\tF1 0.1154\n",
+      "Expansion.Restatement             precision 0.4512\trecall 0.2450\tF1 0.3176\n",
+      "Temporal.Asynchronous.Precedence  precision 0.9737\trecall 0.7400\tF1 0.8409\n",
+      "Temporal.Asynchronous.Succession  precision 0.9592\trecall 0.7344\tF1 0.8319\n",
+      "Temporal.Synchrony                precision 0.5902\trecall 0.6923\tF1 0.6372\n",
       "Overall parser performance --------------\n",
-      "Precision 0.2366 Recall 0.2366 F1 0.2366\n"
+      "Precision 0.5360 Recall 0.5352 F1 0.5356\n"
      ]
     }
    ],
