Commenting and Error Solving

--- a/Coding/00_DataPreprocessor.ipynb
+++ b/Coding/00_DataPreprocessor.ipynb
@@ -22,45 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#'DEPRECATED'\n",
-    "def create_comparison_format1(relation,gold=True):\n",
-    "    conn = dict(relation[\"Connective\"])\n",
-    "    if conn.has_key(\"CharacterSpanList\"):\n",
-    "        del conn[\"CharacterSpanList\"]\n",
-    "    if not conn.has_key(\"RawText\"):\n",
-    "        conn[\"RawText\"] = \"\"\n",
-    "\n",
-    "    dic = {\n",
-    "        \"DocID\": relation[\"DocID\"],\n",
-    "        \"Sense\": relation[\"Sense\"],\n",
-    "        \"Type\" : relation[\"Type\"],\n",
-    "        \"Connective\": conn,\n",
-    "        \"Change\": \"None\"\n",
-    "    }\n",
-    "\n",
-    "    if gold:\n",
-    "        dic[\"Arg1TokenList\"] = [token[2] for token in relation[\"Arg1\"][\"TokenList\"]]\n",
-    "        dic[\"Arg2TokenList\"] = [token[2] for token in relation[\"Arg2\"][\"TokenList\"]]\n",
-    "        dic[\"Parser\"] = \"Gold\"\n",
-    "    else:\n",
-    "        dic[\"Arg1TokenList\"] = relation[\"Arg1\"][\"TokenList\"]\n",
-    "        dic[\"Arg2TokenList\"] = relation[\"Arg2\"][\"TokenList\"]\n",
-    "        dic[\"Parser\"] = \"Pred\"\n",
-    "\n",
-    "    return dic"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_compare_attr(relation,parser_name=\"None\"):\n",
+    "    # To compare each parser, we add new attributes to the relation dictionaries\n",
+    "\n",
+    "    # param relation   Relation of the parser\n",
+    "    # param parser_name Name of the Parser\n",
+    "    \n",
+    "    # return Relation with Connective RawText if not present, \n",
+    "    # \"Change\" (if we create a randomized relation we can track which changes were made to the relation) \n",
+    "    # and \"Parser\" (parser_name) attribute\n",
+    "    \n",
     "    new_rel = relation.copy()\n",
     "    conn = new_rel[\"Connective\"]\n",
     "    if not conn.has_key(\"RawText\"):\n",
@@ -79,6 +54,9 @@
    "outputs": [],
    "source": [
     "class Preprocessor:\n",
+    "    # Class for preprocessing the relations e.g by adding additional attributes or randomize relations to \n",
+    "    # create simulated parser outputs (because we only had access to the parser outputs for the sense challenge)\n",
+    "    \n",
     "    \n",
     "    def __init__(self,parsers,gold_path):\n",
     "        \n",
@@ -89,12 +67,17 @@
     "                \"relations\": [add_compare_attr(rel,parser_name=name) for rel in read_json(path)]\n",
     "            }]\n",
     "        \n",
-    "        #self.parser_rel = [add_compare_attr(rel,parser_name=parser_name) for rel in read_parser_rel(parser_path)]\n",
     "        self.gold_rel = [add_compare_attr(rel,parser_name=\"Gold\") for rel in read_json(gold_path)]\n",
     "        self.get_unique_attr(self.gold_rel)\n",
     "    \n",
     "    \n",
     "    def get_unique_attr(self,relations):\n",
+    "        # Get the unique values for connectives, parser_names and types of relations\n",
+    "\n",
+    "        # param relations   Relations of the parser\n",
+    "        \n",
+    "        # return class variables with the unique values\n",
+    "        \n",
     "        self.unique_connect = set()\n",
     "        self.unique_sense = set()\n",
     "        self.unique_type = set()\n",
@@ -107,6 +90,12 @@
     "        self.unique_connect = self.unique_connect.difference([\"\"])\n",
     "        \n",
     "    def randomize_rel(self,relation,change):\n",
+    "        # Change a specific value of the relation \n",
+    "\n",
+    "        # param relation   Relation of a parser\n",
+    "        # param change   which attribute should be changed\n",
+    "        \n",
+    "        # return relation with one changed attribute\n",
     "        relation[\"Change\"] = change\n",
     "        \n",
     "        if change == \"Arg1\" or change == \"Arg2\":\n",
@@ -146,7 +135,11 @@
     "        return relation\n",
     "    \n",
     "    def create_randomized_parser_output(self,parser_name):\n",
+    "        # Create a randomized parser output, that should behave like a real parser prediction\n",
+    "\n",
+    "        # param parser_name   name of a parser\n",
     "        \n",
+    "        # return class variables with the unique values\n",
     "        parser_rel = [\n",
     "            parser_pred[\"relations\"] \n",
     "            for parser_pred in self.parser_preds \n",
