--- a/Coding/01_ParserMapping.ipynb
+++ b/Coding/01_ParserMapping.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,38 @@
    "source": [
     "rw.save_json(total_alignment.values(),\"data/project_files/test/total_alignment.json\")\n",
     "rw.save_json(not_mappables,\"data/project_files/test/not_mappable.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('steven', 'data/submissions/randomized/test/steven.json'), ('oslopots', 'data/submissions/randomized/test/oslopots.json'), ('ecnucs', 'data/submissions/randomized/test/ecnucs.json')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_parser_files = [\"oslopots.json\",\"steven.json\",\"ecnucs.json\"]\n",
+    "parser_files = [p_file for p_file in rw.get_files_in_directory(path) if p_file in best_parser_files]\n",
+    "best_parsers = [(filee.split(\".\")[0],path+filee) for filee in parser_files]\n",
+    "print(best_parsers)\n",
+    "predicted_lists = []\n",
+    "\n",
+    "for name,path in best_parsers:\n",
+    "    predicted_list = rw.read_json(path)\n",
+    "    predicted_lists += [(name,predicted_list)]\n",
+    "    \n",
+    "total_alignment,not_mappables = align_parsers_to_gold(\n",
+    "    gold_rel=gold_list,\n",
+    "    parsers=predicted_lists)\n",
+    "\n",
+    "rw.save_json(total_alignment.values(),\"data/project_files/test/3best_alignment.json\")\n",
+    "rw.save_json(not_mappables,\"data/project_files/test/3best_not_mappable.json\")"
    ]
   },
   {
