--- a/Coding/00_DataPreprocessor.ipynb
+++ b/Coding/00_DataPreprocessor.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DataPreprocessor\n",
     "\n",
-    "This notebook takes the original files and add some attributes for a comparison later"
+    "This notebook prepares the input data for our project. We received the sense predictions for each parser of the ConLL challenge of 2016 from Te Rutherford (special thanks to him). Unfortunately, the arg1 and arg2 spans of all parsers are the same, so we had to randomize them to generate a \"real\" parser output. Therefore, we changed in some of the predicted relations connectives, types, arg1 or/and arg2 spans. Moreover, we added additional attributes that identifies the changes and parser names."
    ]
   },
   {
@@ -163,12 +163,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Test"
+    "## Test of Randomization\n",
+    "\n",
+    "This shows the process of radnomization, which we use to generate real parser outputs due to the absence of real data for arg1/arg2 and connectives. Nevertheless, the senses are originally from the conll2016 challenge."
    ]
   },
   {
@@ -201,7 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save (randomized) Training Sets"
+    "## Save (randomized) Training Sets\n",
+    "\n",
+    "We tokk"
    ]
   },
   {
