--- a/Paper/projectreport.bib
+++ b/Paper/projectreport.bib
@@ -16,3 +16,11 @@
   pages={1--19},
   year={2016}
 }
+
+@article{oepen2016opt,
+  title={OPT: Oslo--Potsdam--Teesside. Pipelining Rules, Rankers, and Classifier Ensembles for Shallow Discourse Parsing},
+  author={Oepen, Stephan and Read, Jonathon and Scheffler, Tatjana and Sidarenka, Uladzimir and Stede, Manfred and Velldal, Erik and {\O}vrelid, Lilja},
+  journal={Proceedings of the CoNLL-16 shared task},
+  pages={20--26},
+  year={2016}
+}
