--- a/Coding/00_DataPreprocessor.ipynb
+++ b/Coding/00_DataPreprocessor.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# DataPreprocessor\n",
     "\n",
-    "This notebook prepares the input data for our project. We received the sense predictions for each parser of the ConLL challenge of 2016 from Te Rutherford (special thanks to him). Unfortunately, the arg1 and arg2 spans of all parsers are the same, so we had to randomize them to generate a \"real\" parser output. Therefore, we changed in some of the predicted relations connectives, types, arg1 or/and arg2 spans. Moreover, we added additional attributes that identifies the changes and parser names."
+    "This notebook prepares the input data for our project. We received the sense predictions for each parser of the ConLL challenge of 2016 from Te Rutherford (special thanks to him). Unfortunately, the arg1 and arg2 spans of all parsers are the same, so we had to randomize them to generate a \"real\" parser output. Therefore, we changed in some of the predicted relations connectives, types, arg1 or/and arg2 spans. Moreover, we added additional attributes that identifies the changes and parser names.\n",
+    "\n",
+    "If we would receive the real data, we could just add the files here and do the experiments for argument spans right away!"
    ]
   },
   {
@@ -203,12 +205,12 @@
    "source": [
     "## Save (randomized) Training Sets\n",
     "\n",
-    "We tokk"
+    "We took the gold standard and the submissions to generate randomized parser outputs. We use the test data files for the conll 2016 challenge for training our models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save Test Sets"
+    "## Save Test Sets\n",
+    "\n",
+    "We took the blind test files to test our models afterwards."
    ]
   },
   {
