--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -82,6 +82,15 @@
    "outputs": [],
    "source": [
     "def voting(parser_preds,parser_names,model,voting_algorithm):\n",
+    "    # Main function that takes the predictions, the models and a voting algorithm and select the voted sense\n",
+    "    \n",
+    "    #param parser_preds     list of predicted senses by all parsers\n",
+    "    #param parser_names     parser names\n",
+    "    #param model      model with reliability values for each sense in each parsers\n",
+    "    #param voting_algorithm     algorithm that takes all predictions and gives back the resulting sense\n",
+    "    \n",
+    "    #return list of the new senses for each relation\n",
+    "    \n",
     "    new_senses = []\n",
     "    \n",
     "    parser_pred_zip = zip(*parser_preds)\n",
@@ -99,6 +108,8 @@
    "outputs": [],
    "source": [
     "def best_wins_voting(predictions,model):\n",
+    "    #Voting Alogrithm: Select the sense of the parser with the highest reliability for its sense\n",
+    "    \n",
     "    probs = []\n",
     "    sense_predictions = []\n",
     "    for ind,pred in enumerate(predictions):\n",
@@ -123,6 +134,8 @@
    "outputs": [],
    "source": [
     "def max_agreement(predictions,model):\n",
+    "    #Voting Alogrithm: Select the sense, which is predicted by the overall majority of parsers\n",
+    "    \n",
     "    sense_counter = Counter(predictions)\n",
     "    best_sense = sense_counter.most_common(1)[0][0]\n",
     "\n",
@@ -139,6 +152,11 @@
    "outputs": [],
    "source": [
     "def prob_maximation(predictions,model):\n",
+    "    #Voting Alogrithm: Select the sense with the highest reliability sum of all parsers\n",
+    "    # (each reliability for each sense of each parser is summed up for each sense)\n",
+    "    # e.g. Sense1 : parser1_reliability = 0.5, parser2_reliability = 0.3 .... sum = 0.8\n",
+    "    #      Sense2 : parser3_reliability = 0.9 .... sum = 0.9\n",
+    "    # ---> select Sense2\n",
     "    \n",
     "    sense_probs = {pred:[] for pred in set(predictions)}\n",
     "    \n",
@@ -168,6 +186,8 @@
    "outputs": [],
    "source": [
     "def three_best_agreement(predictions,model):\n",
+    "    #Voting Algorithm: Select the sense, which is predicted by the majority of the three best parsers\n",
+    "    \n",
     "    weighting = [tmp_model[\"weight\"] for tmp_model in model]\n",
     "    \n",
     "    best_model_indexes = []\n",
@@ -238,6 +258,14 @@
    "outputs": [],
    "source": [
     "def exchange_sense_values(parser_rel,alignment_list,best_relation_indexes):\n",
+    "    # Exchanges the sense values with a giving relation list, so that only the senses differ (for evaluation)\n",
+    "    \n",
+    "    #param parser_rel     relations for exchanging\n",
+    "    #param alignment_list    list of all aligned relations with the gold standard\n",
+    "    #param best_relation_indexes    which parser prediction should be selected\n",
+    "    \n",
+    "    #return new parser relations with the exchanged sense\n",
+    "    \n",
     "    relation_senses = {}\n",
     "    \n",
     "    for best_parser,alignments in zip(*[best_relation_indexes,alignment_list]):\n",
