Commenting and Error in Statistic solved

--- a/Coding/01_ParserMapping.ipynb
+++ b/Coding/01_ParserMapping.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Parser Gold Mapping\n",
     "\n",
-    "This notebook tries to map the gold standard relations to the corresponding parser predictions. "
+    "This notebook tries to map the gold standard relations to the corresponding parser predictions. Therefore, we can compare later the different predictions for the same relation."
    ]
   },
   {
@@ -52,10 +52,10 @@
     "    # This function aligns the predicted relations to the gold relations\n",
     "    # It uses the aligner functions from the conll2016 validator\n",
     "    \n",
-    "    #param gold_rel gold standard relations\n",
-    "    #param parsers list of predicted relations for each parser\n",
+    "    #param gold_rel     gold standard relations\n",
+    "    #param parsers      list of predicted relations for each parser\n",
     "    \n",
-    "    #return alignment of all of them and a file which contains all unmappable relations\n",
+    "    #return alignment of gold standard and all predictions and a file which contains all unmappable relations\n",
     "    # (if a relation is not predicted by a parser there will be a placeholder for it)\n",
     "    total_alignment = {gold[\"ID\"]:{\"gold\":gold,\"parsers\":[]} for gold in gold_rel}\n",
     "    parsers_not_mappable = []\n",
@@ -86,7 +86,7 @@
    "source": [
     "# Training Set Mapping\n",
     "\n",
-    "we take the gold and predictions and align the relations. Afterwards, we save the total alignments to a json file."
+    "We take the gold and predictions and align the relations. Afterwards, we save the total alignments to a json file."
    ]
   },
   {
